// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dsh keyless credential journey snapshots > lists /credential in /help and stores the key without leaking it 1`] = `
"/compact — Compact older conversation history
/credential <REF> [<value>] — show or store a credential through the credentials service
/exit — Leave the terminal session
/feedback <text> — record feedback about this session
/goal [<objective>|clear|edit <objective>|pause|resume] — set or view the goal for a long-running
task
/help — List the commands this terminal resolves
/model [provider/model] — Show or switch the model this session uses
/permission <preset> — Switch the permission preset (sandbox mode + approval policy)
/plan [off|message] — Enter or leave plan mode
/quit — Leave the terminal session

DEEPSEEK_API_KEY: not configured; store a value with /credential DEEPSEEK_API_KEY <value>













────────────────────────────────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────────────────────
 ready · workspace-write · deepseek-official/deepseek-v4-flash · 0 tokens · /help  ctrl+c exit"
`;

exports[`dsh keyless credential journey snapshots > lists /credential in /help and stores the key without leaking it 2`] = `
"/compact — Compact older conversation history
/credential <REF> [<value>] — show or store a credential through the credentials service
/exit — Leave the terminal session
/feedback <text> — record feedback about this session
/goal [<objective>|clear|edit <objective>|pause|resume] — set or view the goal for a long-running
task
/help — List the commands this terminal resolves
/model [provider/model] — Show or switch the model this session uses
/permission <preset> — Switch the permission preset (sandbox mode + approval policy)
/plan [off|message] — Enter or leave plan mode
/quit — Leave the terminal session

DEEPSEEK_API_KEY: not configured; store a value with /credential DEEPSEEK_API_KEY <value>

Stored DEEPSEEK_API_KEY; the next request resolves it.











────────────────────────────────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────────────────────
 ready · workspace-write · deepseek-official/deepseek-v4-flash · 0 tokens · /help  ctrl+c exit"
`;

exports[`dsh keyless credential journey snapshots > reports the missing credential once, stays usable, and survives resume 1`] = `
"› say hi

› say hi again

MISSING_CREDENTIAL: llm-deepseek: no API key for provider route "deepseek-official"; store
DEEPSEEK_API_KEY through the credentials service (in the terminal: /credential DEEPSEEK_API_KEY
<value>; in the web app: the Models page writes it), or export DEEPSEEK_API_KEY in the launching
environment

















────────────────────────────────────────────────────────────────────────────────────────────────────
 still usable
────────────────────────────────────────────────────────────────────────────────────────────────────
 ready · workspace-write · deepseek-official/deepseek-v4-flash · 13.1k/1000.0k (1%) · /help  ctrl+c
 exit"
`;

exports[`dsh keyless credential journey snapshots > reports the missing credential once, stays usable, and survives resume 2`] = `
"› say hi

› say hi again

MISSING_CREDENTIAL: llm-deepseek: no API key for provider route "deepseek-official"; store
DEEPSEEK_API_KEY through the credentials service (in the terminal: /credential DEEPSEEK_API_KEY
<value>; in the web app: the Models page writes it), or export DEEPSEEK_API_KEY in the launching
environment

















────────────────────────────────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────────────────────
 ready · workspace-write · deepseek-official/deepseek-v4-flash · 13.1k/1000.0k (1%) · /help  ctrl+c
 exit"
`;
